# Tiny-Instant-Messaging-Tool

./: CMakeLists.txt  README.md
imgs/: script.txt
include/mysql/: mysql_version.h  mysqld_error.h
net/: Acceptor.cpp  Acceptor.h  AsyncLog.cpp  ByteBuffer.cpp  ByteBuffer.h  Callbacks.h  Channel.cpp  Channel.h  Connector.cpp  Connector.h  EpollPoller.cpp  EpollPoller.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  InetAddress.cpp  InetAddress.h  Platform.h  PollPoller.cpp  PollPoller.h  Poller.cpp  Poller.h  ProtocolStream.cpp  SelectPoller.cpp  SelectPoller.h  Sockets.cpp  Sockets.h  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Timer.cpp  Timer.h  TimerId.h  TimerQueue.cpp  (+1 more)
src/UTF8-CPP/: Convertor.h
src/client/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  main.cpp
src/database/: CacheManager.cpp  CacheManager.h  DBManager.cpp  DBManager.h
src/moudle/: FriendModel.cpp  FriendModel.h  Group.cpp  Group.h  GroupModel.cpp  GroupModel.h  GroupUser.cpp  GroupUser.h  OfflineMsgModel.cpp  OfflineMsgModel.h  User.cpp  User.h  userModel.cpp  userModel.h
src/server/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  ChatService.cpp  ChatService.h  Msg.h  main.cpp
